--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<section id="section-Expo" class="Expo"> 
-  <img src="images/8626f4a9-f60a-4198-b2f0-02b9067687d1.jpeg" width="285"/>
-</section>
+<!DOCTYPE html>
+ <html>
+  <body>
+   <section id="section-Expo" class="Expo"> 
+    <img src="images/8626f4a9-f60a-4198-b2f0-02b9067687d1.jpeg" width="285"/>
+   </section>
 * * *
-<p> test</p>
-
+   <p> test</p>
+  </body>
+ </html>
